look/generic.css
/* ... */
#statement a {
  padding-left: 1em;
}


/* sidebar */
#menu,
#search,
#translations {
  margin-bottom: 1em;
  clear: left;
  float: left;
}

#menu h2 {
  font-size: 100%;
  color: #787878;
}

#search input[type="text"] {
  padding: 5px 8px 5px 28px;
  width: 80%;
}

#translations ul {
  padding-left: .5em;
  font-size: 90%;
}

#translations ul li {
  list-style: none;
  line-height: 120%;
}


/* ------------------------------------------------------------------------- */
/* Content                                                                   */
/* ------------------------------------------------------------------------- */

/* content specific */
#content {
  clear:right;
  float:left;
  font-size:112%;
  min-height:400px;
  min-width:400px;
  padding-left:3%;
  padding-right:4%;
  width:78%;
}

#content p#category {
  font-size: 170%;
  font-weight: bold;
  line-height: 120%;
  margin: 0 0 0.3em;
}

#content h1,
#content h2,
#content h3 {
  color: #202D79;
  line-height: normal;
}


#content h1 {
  border-bottom: 1px solid #D2D2D2;
  font-size: 250%;
  margin: 0;
  padding: 0 0 0.5em;
}

#content h2 {
  margin-top: 2em;
}

#content h3 {
  font-size: 140%;
  margin: 1.5em 0 .2em 0;
}

#content .image {
  background-color: #FDFDFD;
  float: left;
  padding: 0 2em 2em 0;
}

#content .image.right {
  float: right;
  padding: 0 0 2em 2em;
}

#content .image p {
  border-bottom: 1px solid rgb(210,210,210);
  border-left: 1px solid rgb(210,210,210);
  border-right: 1px solid rgb(210,210,210);
  font-size: 90%;
  margin-top: 0;
  padding: .5em;
}

#content .image .photographer {
  font-size: 90%;
  font-style: italic;
}

.imgright {  /* compatibility */
  float: right;
  margin: 0 0 1em 1em;
}

.postit {  /* compatibility */
  float: left;
  margin: 0 1em 1em 0;
  border: 1px #000 solid;
  padding: 0.3em;
  width: 14em;
  background: #FFECBF;
  text-align: center;
}
  
#content img {
  float: left;
  margin: 0 1em 1em 0;
}

.fineprint {  /* compatibility */
  color: rgb(120,120,120);
  font-size: 90%;
  border-top: 1px solid	rgb(220,220,220);
  padding: 1em .5em;
  margin: 3em -.5em 1em;
}

.toolbox {  /* compatibility */
  background-color: rgb(244,248,250);
  float: right;
  font-size: 85%;
  margin: .5em 0 0 1em;
  padding: 1em;
  width: 12em;
}

p.terminal,
pre.terminal,
p.file,
pre.file {
  font-family: monospace;
  padding: .5em 1em;
}

p.terminal,
pre.terminal {
  background-color: rgb(50,50,50);
  border-left: 10px solid rgb(97,97,97);
  color: white;
}

p.file,
pre.file {
  background-color: rgb(244,248,250);
  border-left: 10px solid rgb(141,172,190);
  color: rgb(50,50,50);
}

#introduction {
  border-bottom: 1px solid rgb(210,210,210);
  float: left;
  font-size: 125%;
  margin: 0 -.5em 2em -.5em;
  min-height: 60px;
  padding: 1em .5em;
  width: 100%;
}

#content #introduction img {
  margin: 0;
}

#introduction p,
p#introduction {
  line-height: 190%;
}

#introduction + * {
  clear: left;
}

/*
 * This expands #introduction until all content has been printed, so it
 * doesn't flow outside of the element.
 */
#introduction p::after {
  content: "";
  clear: both;
  height: 1px;
  overflow: hidden;
}

#introduction .image {
  margin: .5em;
  padding-bottom: 0;
}

#introduction .read_more {
  margin: 0 -1em;
  padding: 0 1em 1em 0;
  text-align: right;
}


/* ------------------------------------------------------------------------- */
/* Subpages menu                                                             */
/* ------------------------------------------------------------------------- */

h2#subpages,
h3#subpages,
h4#subpages {
  display: none;
}

h2#subpages.show-heading,
h3#subpages.show-heading,
h4#subpages.show-heading {
  display: block;
}

ul#subpages,
h2#subpages + ul,
h3#subpages + ul,
h4#subpages + ul {
  margin: 2em 0 2em 0;
  list-style-type: none;
  padding: 0 1em;
}

ul#subpages li,
h2#subpages + ul li,
h3#subpages + ul li,
h4#subpages + ul li {
  float: left;
  margin-bottom: .1em;
  min-width: 8em;
  padding-right: 3%;
  width: 47%;
}

ul#subpages li:nth-child(odd),
h2#subpages + ul li:nth-child(odd),
h3#subpages + ul li:nth-child(odd),
h4#subpages + ul li:nth-child(odd) {
  clear: left;
}


/* navigation sidebar */
#navigation {
  background-color: rgb(74,210,240);
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  height: 28px;
  font-size: 105%;
  font-weight: bold;
}

#navigation,
#navigation a,
#navigation #search {
  color: rgb(244,254,255);
  text-decoration: none;
}

#navigation ul#menu {
  float: left;
  list-style: none;
}

#navigation ul#menu li {
  float: left;
}

#navigation ul#menu li a {
  display: block;
  padding: 5px 18px;
}

#menu ul li ul li #selected,
#menu ul li ul li #selected:hover {
  border-left: 15px solid #C1C1C1;
  color: #333333;
  display: block;
  font-size: 15.5px;
  font-weight: normal;
  line-height: 50%;
  padding: 0.6em 0 0.8em 1.6em
}

#navigation ul#languages {
  background-color: rgb(74,210,240);
  float: left;
  width: 120px;
  text-align: center;
  padding: 5px 10px 3px 10px;
}

#navigation ul#languages li {
  display: none;
}

#navigation ul#languages li a {
  display: block;
  border-bottom: 1px dotted white;
}

#navigation ul#languages li:first-child a,
#navigation ul#languages li:last-child a {
  border-bottom: 1px solid transparent;
}

#navigation ul#languages:hover li:first-child {
  border-bottom: 1px dotted white;
}

#navigation ul#languages:hover li:first-child a {
  font-weight: bold;
}

#navigation ul#languages li a:hover {
  color: white;
  font-weight: normal !important;
}

#navigation ul#languages li.selected {
  display: block;
}

#navigation ul#languages li.selected a {
  font-weight: normal;
}

#navigation ul#languages:hover li {
  display: block;
}

#navigation #search {
  float: right;
  margin: 4px 3px 0 0;
}

#navigation #search input {
  font-size: 95%;
  padding: 2px;
}

#navigation #search input:focus {
  border-color: inherit;
}
/* ... */

